specs/openshift/oc-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: tesk-svc
  namespace: tesk-demo
spec:
  host: tesk-api.c01.k8s-popup.csc.fi
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tesk-svc
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: tesk-api.c01.k8s-popup.csc.fi
      routerName: router
      wildcardPolicy: None
